# cryptonight-hash-lib

./: CMakeLists.txt  Cryptonite.cmake  LICENSE.txt  Makefile  README.md  compat.h  cryptolite_hash.c  cryptonite_hash.c  cryptonite_hash.h  cryptonitehashmodule.c  miner.h  sysinfos.c
asm/: aesb-x64.S  aesb-x86.S
compat/: predefs.c
crypto/: aesb-arm.S  int-util.h
